4- Image-Registry/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: registry
spec:
  type: ClusterIP
  ports:
  - name: registry
    port: 5000
    targetPort: 5000
  selector:
    app: docker-registry
